Update README.md
addresses questions about building (for now) https://github.com/frostwire/frostwire-android/issues/91